grammars/command/test/corpus/polar.txt
=======================
new param "E" @30°,10mm
=======================
new param "E" @30°,10mm
---
(command
  (new
    (parameter
      (name)
      (absolute
        (polar
          (angle)
          (radius))))))

=========================
new param "E" @30deg,10mm
=========================
new param "E" @30deg,10mm
---
(command
  (new
    (parameter
      (name)
      (absolute
        (polar
          (angle)
          (radius))))))

=============================
new param "E" @30degrees,10mm
=============================
new param "E" @30degrees,10mm
---
(command
  (new
    (parameter
      (name)
      (absolute
        (polar
          (angle)
          (radius))))))

=======================
new param "E" 30°,10mm
=======================
new param "E" 30°,10mm
---
(command
  (new
    (parameter
      (name)
      (relative
        (polar
          (angle)
          (radius))))))

========================
new param "E" 30deg,10mm
========================
new param "E" 30deg,10mm
---
(command
  (new
    (parameter
      (name)
      (relative
        (polar
          (angle)
          (radius))))))

============================
new param "E" 30degrees,10mm
============================
new param "E" 30degrees,10mm
---
(command
  (new
    (parameter
      (name)
      (relative
        (polar
          (angle)
          (radius))))))

=====================================
new parameter "E" (input in 30°,10mm)
=====================================
new parameter "E" (input in 30°,10mm)
---
(command
  (new
    (parameter
      (name)
      (input
        (name)
        (polar
          (angle)
          (radius))))))

=======================================
new parameter "E" (input in 30deg,10mm)
=======================================
new parameter "E" (input in 30deg,10mm)
---
(command
  (new
    (parameter
      (name)
      (input
        (name)
        (polar
          (angle)
          (radius))))))

===========================================
new parameter "E" (input in 30degrees,10mm)
===========================================
new parameter "E" (input in 30degrees,10mm)
---
(command
  (new
    (parameter
      (name)
      (input
        (name)
        (polar
          (angle)
          (radius))))))

=========================
new parameter "E" (v1,h1)
=========================
new parameter "E" (v1,h1)
---
(command
  (new
    (parameter
      (name)
      (x
        (reference))
      (y
        (reference)))))

==================================
new parameter "E" (v1,h1 30°,10mm)
==================================
new parameter "E" (v1,h1 30°,10mm)
---
(command
  (new
    (parameter
      (name)
      (x
        (reference))
      (y
        (reference))
      (polar
        (angle)
        (radius)))))

==========================================
new parameter "E" (centre,middle 30°,10mm)
==========================================
new parameter "E" (centre,middle 30°,10mm)
---
(command
  (new
    (parameter
      (name)
      (x
        (reference))
      (y
        (reference))
      (polar
        (angle)
        (radius)))))
