grammars/command/test/corpus/widgets.txt
==============================
new widget channels @10mm,10mm
==============================
new widget channels @10mm,10mm
---
(command
  (new
    (widget
      (name)
      (absolute
        (x)
        (y)))))


=============================
new widget channels 10mm,10mm
=============================
new widget channels 10mm,10mm
---
(command
  (new
    (widget
      (name)
      (relative
        (x)
        (y)))))


===============================
new widget 'channels' 10mm,10mm
===============================
new widget 'channels' 10mm,10mm
---
(command
  (new
    (widget
      (name)
      (relative
        (x)
        (y)))))


===============================
new widget "channels" 10mm,10mm
===============================
new widget "channels" 10mm,10mm
---
(command
  (new
    (widget
      (name)
      (relative
        (x)
        (y)))))


=====================================
new widget "channels" 10mm,10mm ChInd
=====================================
new widget "channels" 10mm,10mm ChInd
---
(command
  (new
    (widget
      (name)
      (relative
        (x)
        (y))
        (part))))


=======================================
new widget "channels" 10mm,10mm 'ChInd'
=======================================
new widget "channels" 10mm,10mm 'ChInd'
---
(command
  (new
    (widget
      (name)
      (relative
        (x)
        (y))
        (part))))


=======================================
new widget "channels" 10mm,10mm "ChInd"
=======================================
new widget "channels" 10mm,10mm "ChInd"
---
(command
  (new
    (widget
      (name)
      (relative
        (x)
        (y))
        (part))))


==============================
new widget "channels" left,top
==============================
new widget "channels" left,top
---
(command
  (new
    (widget
      (name)
      (x
        (reference))
      (y
        (reference)))))


======================================
new widget "channels" left,top "ChInd"
======================================
new widget "channels" left,top "ChInd"
---
(command
  (new
    (widget
      (name)
      (x
        (reference))
      (y
        (reference))
      (part))))


==========================================
new widget "channels" left+4.5mm,top+4.5mm
==========================================
new widget "channels" left+4.5mm,top+4.5mm
---
(command
  (new
    (widget
      (name)
      (x
        (reference)
        (offset))
      (y
        (reference)
        (offset)))))


==================================================
new widget "channels" left+4.5mm,top+4.5mm "ChInd"
==================================================
new widget "channels" left+4.5mm,top+4.5mm "ChInd"
---
(command
  (new
    (widget
      (name)
      (x
        (reference)
        (offset))
      (y
        (reference)
        (offset))
        (part))))


===========================
new widget "channels" v1,h1
===========================
new widget "channels" v1,h1
---
(command
  (new
    (widget
      (name)
      (x
        (reference))
      (y
        (reference)))))


===================================
new widget "channels" v1,h1 "ChInd"
===================================
new widget "channels" v1,h1 "ChInd"
---
(command
  (new
    (widget
      (name)
      (x
        (reference))
      (y
        (reference))
      (part))))


========================================
new widget "channels" v1+4.5mm,h1-12.5mm
========================================
new widget "channels" v1+4.5mm,h1-12.5mm
---
(command
  (new
    (widget
      (name)
      (x
        (reference)
        (offset))
      (y
        (reference)
        (offset)))))


================================================
new widget "channels" v1+4.5mm,h1-12.5mm "ChInd"
================================================
new widget "channels" v1+4.5mm,h1-12.5mm "ChInd"
---
(command
  (new
    (widget
      (name)
      (x
        (reference)
        (offset))
      (y
        (reference)
        (offset))
      (part))))


================
delete widget w1
================
delete widget w1
---
(command
  (delete
    (widget
      (identifier))))


===================
delete widget ChDsp
===================
delete widget ChDsp
---
(command
  (delete
    (widget
      (identifier))))

        
=====================
delete widget "ChDsp"
=====================
delete widget "ChDsp"
---
(command
  (delete
    (widget
      (identifier))))


=====================
delete widget 'ChDsp'
=====================
delete widget 'ChDsp'
---
(command
  (delete
    (widget
      (identifier))))


=============================
set widget channels name mute
=============================
set widget channels name nute
---
(command
  (set
    (widget
      (identifier))
    (name)))


=================================
set widget 'channels' name 'mute'
=================================
set widget 'channels' name 'mute'
---
(command
  (set
    (widget
      (identifier))
    (name)))


=================================
set widget "channels" name "mute"
=================================
set widget "channels" name "mute"
---
(command
  (set
    (widget
      (identifier))
    (name)))


=============================
set widget 'channels' x @10mm
=============================
set widget 'channels' x @10mm
---
(command
  (set
    (widget
      (identifier))
    (x
      (absolute)
      (offset))))


============================
set widget 'channels' x 10mm
============================
set widget 'channels' x 10mm
---
(command
  (set
    (widget
      (identifier))
    (x
      (offset))))


=================================
set widget 'channels' x left+10mm
=================================
set widget 'channels' x left+10mm
---
(command
  (set
    (widget
      (identifier))
    (x
      (reference)
      (offset))))


===============================
set widget 'channels' x v1+10mm
===============================
set widget 'channels' x v1+10mm
---
(command
  (set
    (widget
      (identifier))
    (x
      (reference)
      (offset))))


=============================
set widget 'channels' y @10mm
=============================
set widget 'channels' y @10mm
---
(command
  (set
    (widget
      (identifier))
    (y
      (absolute)
      (offset))))


============================
set widget 'channels' y 10mm
============================
set widget 'channels' y 10mm
---
(command
  (set
    (widget
      (identifier))
    (y
      (offset))))


================================
set widget 'channels' y top+10mm
================================
set widget 'channels' y top+10mm
---
(command
  (set
    (widget
      (identifier))
    (y
      (reference)
      (offset))))


===============================
set widget 'channels' y h1+10mm
===============================
set widget 'channels' y h1+10mm
---
(command
  (set
    (widget
      (identifier))
    (y
      (reference)
      (offset))))


===================================
set widget 'channels' xy @10mm,10mm
===================================
set widget 'channels' xy @10mm,10mm
---
(command
  (set
    (widget
      (identifier))
    (xy
      (absolute)
      (x
        (offset))
      (y
        (offset)))))


==================================
set widget 'channels' xy 10mm,10mm
==================================
set widget 'channels' xy 10mm,10mm
---
(command
  (set
    (widget
      (identifier))
    (xy
      (x
        (offset))
      (y
        (offset)))))


==============================================
set widget 'channels' xy left+10mm,middle+10mm
==============================================
set widget 'channels' xy left+10mm,middle+10mm
---
(command
  (set
    (widget
      (identifier))
    (xy
      (x
        (reference)
        (offset))
      (y
        (reference)
        (offset)))))


========================================
set widget 'channels' xy v1+10mm,h2+10mm
========================================
set widget 'channels' xy v1+10mm,h2+10mm
---
(command
  (set
    (widget
      (identifier))
    (xy
      (x
        (reference)
        (offset))
      (y
        (reference)
        (offset)))))


===================================
set widget 'channels' part 'PJ301M'
===================================
set widget 'channels' part 'PJ301M'
---
(command
  (set
    (widget
      (identifier))
    (part)))


===============================
set widget 'channels' part none
===============================
set widget 'channels' part none
---
(command
  (set
    (widget
      (identifier))
    (part)))

